@@ -40,5 +40,50 @@ class TestUtils(MockTestCase):
         self.assertEquals(('prefix', 'type one.two', '',),
             utils.splitSchemaName('prefix_0_type_1_one_2_two'))
 
+    def test_getAdditionalSchemata(self):
+        from plone.dexterity.interfaces import IDexterityFTI
+        from plone.behavior.interfaces import IBehavior
+        from plone.autoform.interfaces import IFormFieldProvider
+
+        from zope.interface import Interface
+        from zope.interface import providedBy
+
+        class IBehaviorInterface(Interface):
+            pass
+
+        class IBehaviorSchema(Interface):
+            pass
+
+        behavior_mock = self.mocker.mock()
+        fti_mock = self.mocker.mock()
+        provider_mock = self.mocker.mock()
+
+        portal_type = 'prefix_0_type_0_schema'
+        behavior_name = 'behavior_0'
+
+        fti_mock.behaviors
+        self.mocker.result((behavior_name, ))
+
+        behavior_mock.interface
+        self.mocker.result(IBehaviorInterface)
+
+        provider_mock(IBehaviorInterface)
+        self.mocker.result(IBehaviorSchema)
+
+        self.mock_utility(behavior_mock, IBehavior, behavior_name)
+        self.mock_utility(fti_mock, IDexterityFTI, portal_type)
+        self.mock_adapter(provider_mock, IFormFieldProvider,
+                          (providedBy(IBehaviorInterface), ))
+
+        self.replay()
+
+        generator = utils.getAdditionalSchemata(None, portal_type)
+        schematas = tuple(generator)
+
+        self.assertEqual(len(schematas), 1)
+        schemata = schematas[0]
+        self.assertTrue(schemata is IBehaviorSchema)
+
+
 def test_suite():
     return unittest.defaultTestLoader.loadTestsFromName(__name__)
