@@ -4,8 +4,12 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added support in the FTI to look up behaviors by utility name when
+  getting additional schemata (i.e. fields provided by behaviors).
 
+  This functionality makes it possible to create a behavior where the
+  interface is dynamically generated.
+  [malthe]
 
 2.0 (2012-08-30)
 ----------------
